test/fail/big_ret46.v3
//@execute 0=78; 1=86; 10=158
def main(a: int) -> int {
	var x = foo(1, 2, 3, 4, 5 + a, 6 + a, 7 + a, 8 + a, 9 + a, 10 + a, 11 + a, 12 + a);
	return x.0 + x.1 + x.2 + x.3 + x.4 + x.5 + x.6 + x.7 + x.8 + x.9 + x.10 + x.11;
}
def foo(a: int, b: int, c: int, d: int, e: int, f: int, g: int, h: int, i: int, j: int, k: int, l: int)
		-> (int, int, int, int, int, int, int, int, int, int, int, int) {
	return (e, f, g, h, i, j, k, l, a, b, c, d);
}
